k8s-related/persistance/hostpath/spring-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: node4
      containers:
        - name: spring-app
          image: 69966/springgradleimg:1.1.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: my-vol
              mountPath: /app/src/main/resources/images
      volumes:
        - name: my-vol
          hostPath:
            path: /var/images
