k8s-related/persistance/hostpath/spring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-svc
spec:
  selector:
    app: spring-app
  ports:
    - port: 8080
      targetPort: 8080
